--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,4 +1,4 @@
-- title: summer 2024 - KDD Conference in Barcelona, Spain
+- title: Summer 2024 - KDD Conference in Barcelona, Spain
   image: kdd24.png
 
 - title: Spring 2024 - Web Conference in Singapore
