--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: Fall 2024 - Lunch Party at Shenzhen Restaurant
+  image: shenzhen24.jpg
+
 - title: Summer 2024 - KDD Conference in Barcelona, Spain
   image: kdd24.png
 
@@ -25,7 +28,7 @@
 - title: Fall 2023 - CIKM Conference in the U.K.
   image: cikm23.jpg
 
-- title: Fall 2023 - Photo taken at CityU Chinese Restaurant
+- title: Fall 2023 - Dinner Party at CityU Chinese Restaurant
   image: members_1.jpg
 
 - title: Summer 2023 - IJCAI Conference in Macao
