--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
 
 - date: Sep 2024
+  headline: "Langming Liu and Ziru Liu have passed Oral Examination. Congratulations to Dr. Langming Liu and Dr. Ziru Liu!"
+
+- date: Sep 2024
   headline: "3 of our PhD students receive the Research Tuition Scholarship (RTS-CityU) and 6 members also receive the Outstanding Academic Performance Award (OAPA-CityU). Congratulations!"
 
 - date: Aug 2024
