--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -10,3 +10,31 @@
   photo: weibozhou.jpg
   email: weibozhou2-c@my.cityu.edu.hk
   number_educ: 0
+- name: Xuhui Chen
+  photo: chenxuhui.jpg
+  email: xuhuichen7-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Yuqing Fu
+  photo: fuyuqing.jpg
+  email: yuqingfu5-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Yi Qu
+  photo: quyi.jpg
+  email: yiqu35-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Binhao Wang
+  photo: wangbinhao.jpg
+  email: binhawang2-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Tianshuo Wei
+  photo: weitianshuo.jpg
+  email: tianshwei2-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jiajun Zhang
+  photo: zhangjiajun.jpg
+  email: jzhang3439-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Zhipeng Zhong
+  photo: zhongzhipeng.jpg
+  email: pengzhong5-c@my.cityu.edu.hk
+  number_educ: 0
