--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,8 @@
+- date: Sep 2024
+  headline: "Our paper 'Large Language Models for Generative Information Extraction: A Survey' got accepted by FCS'24. Congratulations!"
+
+- date: Sep 2024
+  headline: "Our paper 'Mitigating Hallucinations of Large Language Models in Medical Domain via Contrastive Decoding' got accepted by EMNLP'24. Congratulations!"
 
 - date: Sep 2024
   headline: "Langming Liu and Ziru Liu have passed Oral Examination. Congratulations to Dr. Langming Liu and Dr. Ziru Liu!"
