--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Sep 2024
+  headline: "Our paper 'A Unified Framework for Multi-Domain CTR Prediction via Large Language Models' got accepted by TOIS. Congratulations!"
+
+- date: Sep 2024
   headline: "Our paper 'Large Language Models for Generative Information Extraction: A Survey' got accepted by FCS'24. Congratulations!"
 
 - date: Sep 2024
