--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,17 @@
 - date: Sep 2024
+  headline: "Our paper 'Does Egalitarian Fairness Lead to Instability? The Fairness Bounds in Stable Federated Learning Under Altruistic Behaviors' got accepted by NeurIPS'24. Congratulations!"
+- date: Sep 2024
+  headline: "Our paper 'G3: An Effective and Adaptive Framework for Worldwide Geolocalization Using Large Multi-Modality Models' got accepted by NeurIPS'24. Congratulations!"
+- date: Sep 2024
+  headline: "Our paper 'Association of Objects May Engender Stereotypes: Mitigating Association-Engendered Stereotypes in Text-to-Image Generation' got accepted by NeurIPS'24. Congratulations!"
+- date: Sep 2024
+  headline: "Our paper 'Seeing is NOT Always Believing! Unveiling the True Symmetric Moral Consistency of Large Language Models' got accepted by NeurIPS'24. Congratulations!"
+- date: Sep 2024
+  headline: "Our paper 'LLM-ESR: Large Language Models Enhancement for Long-tailed Sequential Recommendation' got accepted by NeurIPS'24. Congratulations!"
+
+
+
+- date: Sep 2024
   headline: "Our paper 'A Unified Framework for Multi-Domain CTR Prediction via Large Language Models' got accepted by TOIS. Congratulations!"
 
 - date: Sep 2024
