--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: Oct 2024
+  headline: "Sheng Zhang has received the outstanding performance awards (TOP 2 student in DS department). Congratulations!"
+
 - date: Sep 2024
   headline: "Our paper 'Does Egalitarian Fairness Lead to Instability? The Fairness Bounds in Stable Federated Learning Under Altruistic Behaviors' got accepted by NeurIPS'24. Congratulations!"
 
