--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: Fall 2024 - CIDB in Hefei
+  image: cidb24.jpg
+
 - title: Fall 2024 - Lunch Party at Shenzhen Restaurant
   image: shenzhen24.jpg
 
