--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -12,29 +12,36 @@
   number_educ: 0
 - name: Xuhui Chen
   photo: chenxuhui.jpg
+  info: Mentor - Wenlin Zhang
   email: xuhuichen7-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yuqing Fu
   photo: fuyuqing.jpg
+  info: Mentor - Yimin Deng
   email: yuqingfu5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yi Qu
   photo: quyi.jpg
+  info: Mentor - Xiao Han
   email: yiqu35-c@my.cityu.edu.hk
   number_educ: 0
 - name: Binhao Wang
   photo: wangbinhao.jpg
+  info: Mentor - Zichuan Fu
   email: binhawang2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Tianshuo Wei
   photo: weitianshuo.jpg
+  info: Mentor - Maolin Wang
   email: tianshwei2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiajun Zhang
   photo: zhangjiajun.jpg
+  info: Mentor - Kai Li
   email: jzhang3439-c@my.cityu.edu.hk
   number_educ: 0
 - name: Zhipeng Zhong
   photo: zhongzhipeng.jpg
+  info: Mentor - Yi Wen
   email: pengzhong5-c@my.cityu.edu.hk
   number_educ: 0
