--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -45,3 +45,18 @@
   info: Mentor - Yi Wen
   email: pengzhong5-c@my.cityu.edu.hk
   number_educ: 0
+- name: Jiajie Deng
+  photo: dengjiajie.jpg
+  info: Mentor - Haokun Wen
+  email: jiajideng3-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Ningtai Ouyang
+  photo: ouyangningtai.jpg
+  info: Mentor - Haokun Wen
+  email: nouyang6-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Bowen Yu
+  photo: yubowen.jpg
+  info: Mentor - Maolin Wang
+  email: bowyu2-c@my.cityu.edu.hk
+  number_educ: 0
