--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Oct 2024
+  headline: "Pengyue Jia receives NeurIPS student travel award. Congratulations!"
+
+- date: Oct 2024
   headline: "Sheng Zhang and Jiawei Liu have received outstanding performance awards (TOP 2 student in DS department). Congratulations!"
 
 - date: Sep 2024
