--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Oct 2024
+  headline: "Siqi won the silver medal in women's high jump at the City University of Hong Kong Sports Day. Congratulations!"
+  
+- date: Oct 2024
   headline: "Pengyue Jia receives NeurIPS student travel award. Congratulations!"
 
 - date: Oct 2024
