--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Oct 2024
+  headline: "Our team is honored to receive the Outstanding Project (6/26) in CCF-Tencent Open Fund 2023 (CCF-腾讯犀牛鸟基金)"
+  
+- date: Oct 2024
   headline: "Siqi won the silver medal in women's high jump at the City University of Hong Kong Sports Day. Congratulations!"
   
 - date: Oct 2024
