--- a/_data/visitors.yml
+++ b/_data/visitors.yml
@@ -79,3 +79,9 @@
   info: BS at ZJU, Online RA in 2021, next position - PhD at ZJU
   email:
   number_educ: 0
+- name: Dengchao Fang
+  photo: fangdengchao.jpg
+  info: MS at YZU, Visiting Student in 2024
+  email: hongjian318@gmail.com
+  number_educ: 0
+    
