--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,12 @@
+- date: Nov 2024
+  headline: "Our paper 'GLINT-RU: Gated Lightweight Intelligent Recurrent Units for Sequential Recommender Systems' got accepted by KDD'25. Congratulations!"
+
+- date: Nov 2024
+  headline: "Our paper 'DimCL: Dimension-Aware Augmentation in Contrastive Learning for Recomendation' got accepted by KDD'25. Congratulations!"
+
+- date: Nov 2024
+  headline: "Our paper 'NoteLLM-2: Multimodal Large Representation Models for Recommendation' got accepted by KDD'25. Congratulations!"
+
 - date: Oct 2024
   headline: "Our team is honored to receive the Outstanding Project (6/26) in CCF-Tencent Open Fund 2023 (CCF-腾讯犀牛鸟基金)"
   
