--- a/_data/phd22.yml
+++ b/_data/phd22.yml
@@ -196,7 +196,7 @@
   email: likai211@mails.ucas.ac.cn
   number_educ: 0
   education1: Joint-PhD student with UCAS
-  website: https://github.com/likaiucas
+  website: https://likaiucas.github.io/
 - name: Guojing Li
   photo: guojingli.jpg
   info: CityU-RUC Joint-PhD
