--- a/_data/news.yml
+++ b/_data/news.yml
@@ -10,6 +10,12 @@
 - date: Nov 2024
   headline: "Our paper 'NoteLLM-2: Multimodal Large Representation Models for Recommendation' got accepted by KDD'25. Congratulations!"
 
+- date: Nov 2024
+  headline: "Xiao Han has passed Oral Examination. Congratulations to Dr. Xiao Han!"
+
+- date: Oct 2024
+  headline: "Zijian Zhang has passed Oral Examination. Congratulations to Dr. Zijian Zhang!"
+
 - date: Oct 2024
   headline: "Our team is honored to receive the Outstanding Project (6/26) in CCF-Tencent Open Fund 2023 (CCF-腾讯犀牛鸟基金)"
   
