--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Nov 2024
+  headline: "Our paper 'LLMTreeRec: A Tree-based Large Language Model Framework for Cold-start Recommendation' got accepted by COLING'25. Congratulations!"
+
+- date: Nov 2024
   headline: "Our paper 'A Contrastive Pretrain Model with Prompt Tuning for Multi-center Medication Recommendation' got accepted by TOIS. Congratulations!"
 
 - date: Nov 2024
