--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,21 @@
+- date: Dec 2024
+  headline: "Our paper 'LLM-Powered Efficient User Simulator for Recommender System' got accepted by AAAI'25. Congratulations!"
+
+- date: Dec 2024
+  headline: "Our paper 'GARLIC: GPT-Augmented Reinforcement Learning with Intelligent Control for Vehicle Dispatching' got accepted by AAAI'25. Congratulations!"
+
+- date: Dec 2024
+  headline: "Our paper 'Harnessing Large Language Models for Knowledge Graph Question Answering via Adaptive Multi-Aspect Retrieval-Augmentation' got accepted by AAAI'25. Congratulations!"
+
+- date: Dec 2024
+  headline: "Our paper 'POI-Enhancer: An LLM-based Semantic Enhancement Framework for POI Representation Learning' got accepted by AAAI'25. Congratulations!"
+
+- date: Dec 2024
+  headline: "Our paper 'SIGMA: Selective Gated Mamba for Sequential Recommendation' got accepted by AAAI'25. Congratulations!"
+  
+- date: Dec 2024
+  headline: "Our paper 'LLMEmb: Large Language Model Can Be a Good Embedding Generator for Sequential Recommendation' got accepted by AAAI'25. Congratulations!"
+
 - date: Nov 2024
   headline: "Our paper 'LLMTreeRec: A Tree-based Large Language Model Framework for Cold-start Recommendation' got accepted by COLING'25. Congratulations!"
 
