--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,10 @@
 - date: Dec 2024
+  headline: "Our tutorial (Web-Centric Human Mobility Analytics: Methods, Applications, and Future Directions in the LLM Era) got accepted by WWW'25. Congratulations!"
+
+- date: Dec 2024
+  headline: "Our tutorial (Joint Modeling in Deep Recommender Systems) got accepted by WWW'25. Congratulations!"
+
+- date: Dec 2024
   headline: "Our paper 'LLM-Powered Efficient User Simulator for Recommender System' got accepted by AAAI'25. Congratulations!"
 
 - date: Dec 2024
