--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,8 @@
+- title: Winter 2024 - ICDM in Abu Dhabi
+  image: icdm24.jpg
+- title: Winter 2024 - Sheikh Zayed Grand Mosque
+  image: icdm_travel_24.jpg
+
 - title: Fall 2024 - High Jump in CityU
   image: highjump24.jpg
 
