--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Dec 2024
+  headline: "Our team won the championship in NeurIPS 2024 Auto-Bidding in Large-Scale Auctions AIGB track hold by Alimama. Congratulations!"
+
+- date: Dec 2024
   headline: "Our tutorial (Web-Centric Human Mobility Analytics: Methods, Applications, and Future Directions in the LLM Era) got accepted by WWW'25. Congratulations!"
 
 - date: Dec 2024
