--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -1,13 +1,16 @@
 - name: Wenxin Luo
   photo: wenxinluo.jpg
+  info: Mentor - Xiaopeng Li
   email: wenxinluo5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weirui Wang
   photo: weiruiwang.jpg
+  info: Mentor - Xiaopeng Li
   email: wrwang8-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weibo Zhou
   photo: weibozhou.jpg
+  info: Mentor - Xiaopeng Li
   email: weibozhou2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Xuhui Chen
