--- a/_data/postdoc23.yml
+++ b/_data/postdoc23.yml
@@ -1,6 +1,7 @@
-- name: Yu Li
-  photo: yuli.jpg
-  info: next position-Assistant Professor at JLU
-  email: liyu.csjlu@gmail.com
+- name: Xiao Han
+  photo: xiaohan.jpg
+  email: xhan49-c@my.cityu.edu.hk
   number_educ: 0
-  website: https://liyu1990.github.io/
+  info: PhD-Data Science
+  education1: with Prof Dingxuan Zhou (USYD)
+  website: https://www.hahahenha.net/static/CV/index_ENG.html
