--- a/_data/alumni_phd.yml
+++ b/_data/alumni_phd.yml
@@ -2,5 +2,13 @@
   photo: zijianzhang.jpg
   email: zijian.zhang@my.cityu.edu.hk
   number_educ: 0
-  info: CityU-JLU Joint-PhD
+  info: CityU-JLU Joint-PhD, current position-Assistant Professor at JLU
   website: https://zhangzj2114.github.io/
+
+- name: Ziru Liu
+  photo: ziruliu.jpg
+  email: ziruliu2-c@my.cityu.edu.hk
+  number_educ: 0
+  info: current position-Huawei
+  education1: with Prof Dingxuan Zhou (USYD)
+  website: https://liuziru666.wixsite.com/homepage
