--- a/_data/alumni_phd.yml
+++ b/_data/alumni_phd.yml
@@ -18,3 +18,10 @@
   info: PhD-Data Science, current position-Alibaba
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://ming429778.github.io/
+
+
+- name: Zhi Zheng
+  photo: zhizheng.jpg
+  info: PhD at USTC, with Prof Tong Xu, Online RA in 2021-2022
+  email:
+  number_educ: 0
