--- a/_data/alumni_ms.yml
+++ b/_data/alumni_ms.yml
@@ -40,3 +40,128 @@
   info: Mentor - Xiangyu Zhao, next position - HKAFIT
   email:
   number_educ: 0
+
+
+- name: Qian Ma
+  year: 2022-2023
+  photo: qianma.jpg
+  info: Mentor - Zijian Zhang, first author - CIKM23, next position - PhD at RPI
+  email: qma233-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Kecheng Chen
+  year: 2022-2023
+  photo: kechengchen.jpg
+  info: Mentor - Ziru Liu, first author - KAIS, next position - PhD at HKBU
+  email: kechechen4-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Chengxi Li
+  year: 2022-2023
+  photo: chengxili.jpg
+  info: Mentor - Yejing Wang, first author - RecSys23, next position - Meituan
+  email: chengxli5-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jiaxi Hu
+  year: 2022-2023
+  photo: jiaxihu.jpg
+  info: Mentor - Jingtong Gao, next position - PhD at HKUST GZ
+  email: jiaxihu2-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Yutian Xiao
+  year: 2022-2023
+  photo: yutianxiao.jpg
+  info: Mentor - Qidong Liu, next position - PhD at BUAA
+  email: yutiaxiao2-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Tong Wu
+  year: 2022-2023
+  photo: tongwu.jpg
+  info: Mentor - Maolin Wang, next position - Kuaishou
+  email: twu274-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jiangping Lu
+  year: 2022-2023
+  photo: jiangpinglv.jpg
+  info: Mentor - Langming Liu
+  email: jiangpilu2-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jiaocong Wang
+  year: 2022-2023
+  photo: jiaocongwang.jpg
+  info: Mentor - Yuhao Wang
+  email: jiaocwang2-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jie Wang
+  year: 2022-2023
+  photo: jiewang.jpg
+  info: Mentor - Maolin Wang, next position - AIFT (Laboratory for AI-Powered Financial Technologies Ltd.)
+  email: jwang998-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Bo Li
+  year: 2022-2023
+  photo: boli.jpg
+  info: Mentor - Langming Liu
+  email: boli77-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Yinliang Kang
+  year: 2022-2023
+  photo: yinliangkang.jpg
+  info: Mentor - Pengyue Jia, next position - Agoda
+  email: yinlikang2-c@my.cityu.edu.hk
+  number_educ: 0
+  
+- name: Sheng Zhang
+  year: 2023-2024
+  photo: shengzhang.jpg
+  info: Mentor - Maolin Wang
+  email: szhang844-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jiawei Liu
+  year: 2023-2024
+  photo: jiaweiliu.jpg
+  info: Mentor - Yejing Wang
+  email: jiawliu7-c@my.cityu.edu.hk
+  number_educ: 0
+  website: https://patrick-liu123.github.io/
+- name: Qiyuan Ge
+  year: 2023-2024
+  photo: qiyuange.jpg
+  info: Mentor - Wenlin Zhang
+  email: qiyuange2-c@my.cityu.edu.hk
+  number_educ: 0
+  website: https://github.com/Qiyuan-Ge
+- name: Zhuoran Li
+  year: 2023-2024
+  photo: zhuoranli.jpg
+  info: Mentor - Yuanshao Zhu
+  email: zhuorali7-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Yiqi You
+  year: 2023-2024
+  photo: yiqiyou.jpg
+  info: Mentor - Pengyue Jia
+  email: yqyou4-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Xuchuan Wang
+  year: 2023-2024
+  info: Mentor - Siqi Lei
+  photo: xuchuanwang.jpg
+  email: xuchuwang3-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jiaming Guo
+  year: 2023-2024
+  photo: jiamingguo.jpg
+  email: jiaminguo6-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Yuantian Zhou
+  year: 2023-2024
+  photo: yuantianzhou.jpg
+  email: yuantzhou3-c@my.cityu.edu.hk
+  website: https://github.com/ZhouYuantian
+  number_educ: 0
+- name: Ziwei Liu
+  year: 2023-2024
+  info: Mentor - Qidong Liu
+  photo: ziweiliu.jpg
+  email: ziwliu8@gmail.com
+  website: https://github.com/BokettoW
+  number_educ: 0
