--- a/_data/alumni_scholar_ra.yml
+++ b/_data/alumni_scholar_ra.yml
@@ -1,55 +1,66 @@
 - name: Qingqing Yi
+  year: Visiting Student in 2023-2024
   photo: qingqingyi.jpg
-  info: PhD at SWUFE, Visiting Student in 2023
+  info: next position - PhD at SWUFE
   email: yiqingqing@smail.swufe.edu.cn
   number_educ: 0
 - name: Zhenyu Deng
+  year: Visiting Student in 2023-2024
   photo: zhenyudeng.jpg
-  info: MS at SWPU, Visiting Student in 2023
+  info: MS at SWPU
   email: zhenyu_deng@qq.com
   number_educ: 0
 - name: Zhenzhen Zhao
+  year: Visiting Student in 2023-2024
   photo: zhenzhenzhao.jpg
-  info: PhD at ZJUT, Visiting Student in 2023
+  info: PhD at ZJUT
   email: zhenzzhao4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Qihong Pan
+  year: Visiting Student in 2023-2024
   photo: qihongpan.jpg
-  info: PhD at ZJUT, Visiting Student in 2023
+  info: PhD at ZJUT
   email: TBD
   number_educ: 0
 - name: Jialin Liu
+  year: Visiting Student in 2023-2024
   photo: jialinliu.jpg
-  info: <!--PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, --> Visiting Student in 2023, next position - AP in China
+  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, next position - AP in China
   email: jLliu@cnic.cn
   number_educ: 0
 - name: Chunxu Zhang
+  year: Visiting Student in 2022-2023
   photo: chunxuzhang.jpg
-  info: PhD at JLU, Visiting Student in 2022-2023
+  info: PhD at JLU
   email: cxzhang19@mails.jlu.edu.cn
   number_educ: 0
 - name: Jie Cai
+  year: Online RA in 2022-2023
   photo: jiecai.jpg
-  info: MS at Tsinghua, with Prof Wenwu Zhu, Online RA in 2022, next position - PhD at USC
+  info: MS at Tsinghua, with Prof Wenwu Zhu, next position - PhD at USC
   email: caij20@mails.tsinghua.edu.cn
   number_educ: 0
 - name: Jiajun Zhou
+  year: Visiting Student in 2022-2023
   photo: jiajunzhou.jpg
-  info: MS at ZJUT, with Prof Qi Xuan, Visiting Student in 2022
+  info: MS at ZJUT, with Prof Qi Xuan
   email: jjzhou1202@gmail.com
   number_educ: 0
 - name: Yan Zhang
+  year: Visiting Student in 2022-2023
   photo: yanzhang.jpg
-  info: MS at ZJUT, with Prof Guojiang Shen, Visiting Student in 2022, next position - PhD at ZJU
+  info: MS at ZJUT, with Prof Guojiang Shen, next position - PhD at ZJU
   email: nameyzhang@gmail.com
   number_educ: 0
 - name: Muyang Li
+  Online RA in 2021-2022
   photo: muyangli.jpg
-  info: BS at University of Auckland, Online RA in 2021-2022, next position - PhD at USYD
+  info: BS at University of Auckland, next position - PhD at USYD
   email:
   number_educ: 0
 - name: Chuan Lyu
+  Online RA in 2021-2022
   photo: chuanlyu.jpg
-  info: BS at ZJU, Online RA in 2021, next position - PhD at ZJU
+  info: BS at ZJU, next position - PhD at ZJU
   email:
   number_educ: 0
