--- a/_data/alumni_scholar_ra.yml
+++ b/_data/alumni_scholar_ra.yml
@@ -53,13 +53,13 @@
   email: nameyzhang@gmail.com
   number_educ: 0
 - name: Muyang Li
-  Online RA in 2021-2022
+  year: Online RA in 2021-2022
   photo: muyangli.jpg
   info: BS at University of Auckland, next position - PhD at USYD
   email:
   number_educ: 0
 - name: Chuan Lyu
-  Online RA in 2021-2022
+  year: Online RA in 2021-2022
   photo: chuanlyu.jpg
   info: BS at ZJU, next position - PhD at ZJU
   email:
