--- a/_data/postdoc23.yml
+++ b/_data/postdoc23.yml
@@ -2,6 +2,6 @@
   photo: xiaohan.jpg
   email: xhan49-c@my.cityu.edu.hk
   number_educ: 0
-  info: PhD-Data Science
+  info: Postdoc
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://www.hahahenha.net/static/CV/index_ENG.html
