--- a/_data/alumni_phd.yml
+++ b/_data/alumni_phd.yml
@@ -25,3 +25,23 @@
   info: PhD at USTC, with Prof Tong Xu, Online RA in 2021-2022
   email:
   number_educ: 0
+- name: Zhenzhen Zhao
+  photo: zhenzhenzhao.jpg
+  info: PhD at ZJUT, Visiting Student in 2023-2024
+  email: zhenzzhao4-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Qihong Pan
+  photo: qihongpan.jpg
+  info: PhD at ZJUT, Visiting Student in 2023-2024
+  email: TBD
+  number_educ: 0
+- name: Jialin Liu
+  photo: jialinliu.jpg
+  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, next position - AP in China, Visiting Student in 2023-2024
+  email: jLliu@cnic.cn
+  number_educ: 0
+- name: Chunxu Zhang
+  photo: chunxuzhang.jpg
+  info: PhD at JLU, Visiting Student in 2022-2023
+  email: cxzhang19@mails.jlu.edu.cn
+  number_educ: 0
