--- a/_data/alumni_phd.yml
+++ b/_data/alumni_phd.yml
@@ -18,6 +18,13 @@
   info: PhD-Data Science, current position-Alibaba
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://ming429778.github.io/
+- name: Xiao Han
+  photo: xiaohan.jpg
+  email: xhan49-c@my.cityu.edu.hk
+  number_educ: 0
+  info: Postdoc
+  education1: with Prof Dingxuan Zhou (USYD)
+  website: https://www.hahahenha.net/static/CV/index_ENG.html
 
 
 - name: Zhi Zheng
