--- a/_data/alumni_phd.yml
+++ b/_data/alumni_phd.yml
@@ -2,44 +2,44 @@
   photo: zijianzhang.jpg
   email: zijian.zhang@my.cityu.edu.hk
   number_educ: 0
-  info: CityU-JLU Joint-PhD, current position-Assistant Professor at JLU
+  info: CityU-JLU Joint-PhD, 2024, current position-Assistant Professor at JLU
   website: https://zhangzj2114.github.io/
 - name: Ziru Liu
   photo: ziruliu.jpg
   email: ziruliu2-c@my.cityu.edu.hk
   number_educ: 0
-  info: PhD-Data Science, current position-Huawei
+  info: PhD-Data Science, 2024, current position-Huawei
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://liuziru666.wixsite.com/homepage
 - name: Langming Liu
   photo: langmingliu.jpg
   email: langmiliu2-c@my.cityu.edu.hk
   number_educ: 0
-  info: PhD-Data Science, current position-Alibaba
+  info: PhD-Data Science, 2024, current position-Alibaba
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://ming429778.github.io/
 - name: Xiao Han
   photo: xiaohan.jpg
   email: xhan49-c@my.cityu.edu.hk
   number_educ: 0
-  info: Postdoc
+  info: PhD-Data Science, 2024, current position-Postdoc at AML
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://www.hahahenha.net/static/CV/index_ENG.html
 
 
 - name: Zhi Zheng
   photo: zhizheng.jpg
-  info: PhD at USTC, with Prof Tong Xu, Online RA in 2021-2022
+  info: PhD at USTC, Online RA in 2021-2022, with Prof Tong Xu, next position - postdoc in USTC
   email:
   number_educ: 0
 - name: Chunxu Zhang
   photo: chunxuzhang.jpg
-  info: PhD at JLU, Visiting Student in 2022-2023
+  info: PhD at JLU, Visiting Student in 2022-2023, with Prof. Bo Yang, next position - postdoc in JLU
   email: cxzhang19@mails.jlu.edu.cn
   number_educ: 0
 - name: Zhenzhen Zhao
   photo: zhenzhenzhao.jpg
-  info: PhD at ZJUT, Visiting Student in 2023-2024
+  info: PhD at ZJUT, Visiting Student in 2023-2024, with 
   email: zhenzzhao4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Qihong Pan
@@ -49,6 +49,6 @@
   number_educ: 0
 - name: Jialin Liu
   photo: jialinliu.jpg
-  info: PhD at UCAS, with Prof Jun Li and Dr Guocheng Guo, next position - AP in China, Visiting Student in 2023-2024
+  info: PhD at UCAS, Visiting Student in 2023-2024, with Prof Jun Li and Dr Guocheng Guo, next position - AP in China
   email: jLliu@cnic.cn
   number_educ: 0
