--- a/_data/alumni_phd.yml
+++ b/_data/alumni_phd.yml
@@ -39,7 +39,7 @@
   number_educ: 0
 - name: Zhenzhen Zhao
   photo: zhenzhenzhao.jpg
-  info: PhD at ZJUT, Visiting Student in 2023-2024, with 
+  info: PhD at ZJUT, Visiting Student in 2023-2024
   email: zhenzzhao4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Qihong Pan
