--- a/_data/alumni_phd.yml
+++ b/_data/alumni_phd.yml
@@ -39,7 +39,7 @@
   number_educ: 0
 - name: Chunxu Zhang
   photo: chunxuzhang.jpg
-  info: PhD at JLU, Visiting Student in 2022-2023, with Prof Bo Yang, next position - postdoc in JLU
+  info: PhD at JLU, Visiting Student in 2022-2023, with Prof Bo Yang, next position - postdoc in HKUST
   email: cxzhang19@mails.jlu.edu.cn
   number_educ: 0
 - name: Zhenzhen Zhao
