--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -1,11 +1,11 @@
 - name: Wenxin Luo
   photo: wenxinluo.jpg
-  info: Mentor - Xiaopeng Li
+  info: Mentor - Xiaopeng Li, first author - ICASSP'25
   email: wenxinluo5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weirui Wang
   photo: weiruiwang.jpg
-  info: Mentor - Xiaopeng Li
+  info: Mentor - Xiaopeng Li, first author - ICASSP'25
   email: wrwang8-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weibo Zhou
