--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: Jan 2025
+  headline: "Our paper 'The impact of artificial intelligence on carbon market in China: Evidence from quantile-on-quantile regression approach' got accepted by Technological Forecasting and Social Change. Congratulations!"
+  
 - date: Dec 2024
   headline: "Our paper 'TAPO: Task-Referenced Adaptation for Prompt Optimization' got accepted by ICASSP'25. Congratulations!"
 
