--- a/_data/postdoc23.yml
+++ b/_data/postdoc23.yml
@@ -5,3 +5,11 @@
   info: Postdoc
   education1: with Prof Dingxuan Zhou (USYD)
   website: https://www.hahahenha.net/static/CV/index_ENG.html
+
+- name: Xuemeng Song
+  photo: xuemengsong.jpg
+  email: sxmustc@gmail.com
+  number_educ: 0
+  info: Research Fellow
+  education1: 0
+  website: https://xuemengsong.github.io/
