--- a/_data/alumni_ms.yml
+++ b/_data/alumni_ms.yml
@@ -51,7 +51,7 @@
 - name: Kecheng Chen
   year: 2022-2023
   photo: kechengchen.jpg
-  info: Mentor - Ziru Liu, first author - KAIS, next position - PhD at HKBU
+  info: Mentor - Ziru Liu, first author - KAIS, Outstanding Research Project Award (summer 2023), next position - PhD at HKBU
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Chengxi Li
@@ -81,25 +81,25 @@
 - name: Jiangping Lu
   year: 2022-2023
   photo: jiangpinglv.jpg
-  info: Mentor - Langming Liu
+  info: Mentor - Langming Liu, Outstanding Research Project Award (summer 2023)
   email: jiangpilu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaocong Wang
   year: 2022-2023
   photo: jiaocongwang.jpg
-  info: Mentor - Yuhao Wang
+  info: Mentor - Yuhao Wang, Outstanding Research Project Award (summer 2023)
   email: jiaocwang2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jie Wang
   year: 2022-2023
   photo: jiewang.jpg
-  info: Mentor - Maolin Wang, next position - AIFT (Laboratory for AI-Powered Financial Technologies Ltd.)
+  info: Mentor - Maolin Wang, Outstanding Dissertation Award (summer 2023), next position - AIFT (Laboratory for AI-Powered Financial Technologies Ltd.)
   email: jwang998-c@my.cityu.edu.hk
   number_educ: 0
 - name: Bo Li
   year: 2022-2023
   photo: boli.jpg
-  info: Mentor - Langming Liu
+  info: Mentor - Langming Liu, Outstanding Research Project Award (summer 2023)
   email: boli77-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yinliang Kang
@@ -112,7 +112,7 @@
 - name: Sheng Zhang
   year: 2023-2024
   photo: shengzhang.jpg
-  info: Mentor - Maolin Wang
+  info: Mentor - Maolin Wang, first author - RecSys24, KDD25, Outstanding Academic Performance Award (summer 2024), Outstanding Research Project Award (summer 2024)
   email: szhang844-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiawei Liu
