--- a/_data/alumni_ms.yml
+++ b/_data/alumni_ms.yml
@@ -118,7 +118,7 @@
 - name: Jiawei Liu
   year: 2023-2024
   photo: jiaweiliu.jpg
-  info: Mentor - Yejing Wang
+  info: Mentor - Yejing Wang, Outstanding Academic Performance Award (summer 2024), Outstanding Dissertation Award (summer 2024)
   email: jiawliu7-c@my.cityu.edu.hk
   number_educ: 0
   website: https://patrick-liu123.github.io/
