--- a/_data/alumni_ms.yml
+++ b/_data/alumni_ms.yml
@@ -1,43 +1,43 @@
 - name: Kesen Zhao
   year: 2021-2022
   photo: kesenzhao.jpg
-  info: Mentor - Xiangyu Zhao, first author - WWW23, NeurIPS23, CIKM22, next position - PhD at NTU
+  info: Mentor - Xiangyu Zhao, first author - WWW23, NeurIPS23, CIKM22, current position - PhD at NTU
   email: kesenzhao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weilin Lin
   year: 2021-2022
   photo: weilinlin.jpg
-  info: Mentor - Xiangyu Zhao, first author - WWW23, KDD22, next position - PhD at HKUST GZ
+  info: Mentor - Xiangyu Zhao, first author - WWW23, KDD22, current position - PhD at HKUST GZ
   email: wllin9-c@my.cityu.edu.hk
   number_educ: 0
 - name: Zhiwei Hu
   year: 2021-2022
   photo: zhiweihu.jpg
-  info: Mentor - Xiangyu Zhao & Zijian Zhang, first author - CIKM23, next position - PhD at CUHK SZ
+  info: Mentor - Xiangyu Zhao & Zijian Zhang, first author - CIKM23, current position - PhD at CUHK SZ
   email:
   number_educ: 0
 - name: Jiahao Liang
   year: 2021-2022
   photo: jiahaoliang.jpg
-  info: Mentor - Xiangyu Zhao, first author - WWW23, next position - PhD at SCUT
+  info: Mentor - Xiangyu Zhao, first author - WWW23, current position - PhD at SCUT
   email: jiahliang6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Ze Huang
   year: 2021-2022
   photo: zehuang.jpg
-  info: Mentor - Xiangyu Zhao & Zijian Zhang, first author - CIKM23, next position - Shokz
+  info: Mentor - Xiangyu Zhao & Zijian Zhang, first author - CIKM23, current position - Shokz
   email:
   number_educ: 0
 - name: Xinxin Gong
   year: 2021-2022
   photo: xinxingong.jpg
-  info: Mentor - Xiangyu Zhao, next position - Huawei
+  info: Mentor - Xiangyu Zhao, current position - Huawei
   email:
   number_educ: 0
 - name: Jiahao Dong
   year: 2021-2022
   photo: jiahaodong.jpg
-  info: Mentor - Xiangyu Zhao, next position - HKAFIT
+  info: Mentor - Xiangyu Zhao, current position - HKAFIT
   email:
   number_educ: 0
 
@@ -45,37 +45,37 @@
 - name: Qian Ma
   year: 2022-2023
   photo: qianma.jpg
-  info: Mentor - Zijian Zhang, first author - CIKM23, next position - PhD at RPI
+  info: Mentor - Zijian Zhang, first author - CIKM23, current position - PhD at RPI
   email: qma233-c@my.cityu.edu.hk
   number_educ: 0
 - name: Kecheng Chen
   year: 2022-2023
   photo: kechengchen.jpg
-  info: Mentor - Ziru Liu, first author - KAIS, Outstanding Research Project Award (summer 2023), next position - PhD at HKBU
+  info: Mentor - Ziru Liu, first author - KAIS, Outstanding Research Project Award (summer 2023), current position - PhD at HKBU
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Chengxi Li
   year: 2022-2023
   photo: chengxili.jpg
-  info: Mentor - Yejing Wang, first author - RecSys23, next position - Meituan
+  info: Mentor - Yejing Wang, first author - RecSys23, current position - Meituan
   email: chengxli5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaxi Hu
   year: 2022-2023
   photo: jiaxihu.jpg
-  info: Mentor - Jingtong Gao, next position - PhD at HKUST GZ
+  info: Mentor - Jingtong Gao, current position - PhD at HKUST GZ
   email: jiaxihu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yutian Xiao
   year: 2022-2023
   photo: yutianxiao.jpg
-  info: Mentor - Qidong Liu, next position - PhD at BUAA
+  info: Mentor - Qidong Liu, current position - PhD at BUAA
   email: yutiaxiao2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Tong Wu
   year: 2022-2023
   photo: tongwu.jpg
-  info: Mentor - Maolin Wang, next position - Kuaishou
+  info: Mentor - Maolin Wang, current position - Kuaishou
   email: twu274-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiangping Lu
@@ -93,7 +93,7 @@
 - name: Jie Wang
   year: 2022-2023
   photo: jiewang.jpg
-  info: Mentor - Maolin Wang, Outstanding Dissertation Award (summer 2023), next position - AIFT (Laboratory for AI-Powered Financial Technologies Ltd.)
+  info: Mentor - Maolin Wang, Outstanding Dissertation Award (summer 2023), current position - AIFT (Laboratory for AI-Powered Financial Technologies Ltd.)
   email: jwang998-c@my.cityu.edu.hk
   number_educ: 0
 - name: Bo Li
@@ -105,7 +105,7 @@
 - name: Yinliang Kang
   year: 2022-2023
   photo: yinliangkang.jpg
-  info: Mentor - Pengyue Jia, next position - Agoda
+  info: Mentor - Pengyue Jia, current position - Agoda
   email: yinlikang2-c@my.cityu.edu.hk
   number_educ: 0
   
