--- a/_data/alumni_scholar_ra.yml
+++ b/_data/alumni_scholar_ra.yml
@@ -1,19 +1,19 @@
 - name: Muyang Li
   year: Online RA in 2021-2022
   photo: muyangli.jpg
-  info: BS at University of Auckland, next position - PhD at USYD
+  info: BS at University of Auckland, current position - PhD at USYD
   email:
   number_educ: 0
 - name: Chuan Lyu
   year: Online RA in 2021-2022
   photo: chuanlyu.jpg
-  info: BS at ZJU, next position - PhD at ZJU
+  info: BS at ZJU, current position - PhD at ZJU
   email:
   number_educ: 0
 - name: Jie Cai
   year: Online RA in 2022-2023
   photo: jiecai.jpg
-  info: MS at Tsinghua, with Prof Wenwu Zhu, next position - PhD at USC
+  info: MS at Tsinghua, with Prof Wenwu Zhu, current position - PhD at USC
   email: caij20@mails.tsinghua.edu.cn
   number_educ: 0
 - name: Jiajun Zhou
@@ -25,7 +25,7 @@
 - name: Yan Zhang
   year: Visiting Student in 2022-2023
   photo: yanzhang.jpg
-  info: MS at ZJUT, with Prof Guojiang Shen, next position - PhD at ZJU
+  info: MS at ZJUT, with Prof Guojiang Shen, current position - PhD at ZJU
   email: nameyzhang@gmail.com
   number_educ: 0
 - name: Zhenyu Deng
