--- a/_data/alumni_ms.yml
+++ b/_data/alumni_ms.yml
@@ -160,7 +160,7 @@
   number_educ: 0
 - name: Ziwei Liu
   year: 2023-2024
-  info: Mentor - Qidong Liu, fisrt author - AAAI'25
+  info: Mentor - Qidong Liu, first author - AAAI'25
   photo: ziweiliu.jpg
   email: ziwliu8@gmail.com
   website: https://github.com/BokettoW
