--- a/_data/alumni_ms.yml
+++ b/_data/alumni_ms.yml
@@ -51,7 +51,7 @@
 - name: Kecheng Chen
   year: 2022-2023
   photo: kechengchen.jpg
-  info: Mentor - Ziru Liu, first author - KAIS, Outstanding Research Project Award (summer 2023), current position - PhD at HKBU
+  info: Mentor - Ziru Liu, first author - KAIS, Outstanding Research Project Award, current position - PhD at HKBU
   email: kechechen4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Chengxi Li
@@ -81,25 +81,25 @@
 - name: Jiangping Lu
   year: 2022-2023
   photo: jiangpinglv.jpg
-  info: Mentor - Langming Liu, Outstanding Research Project Award (summer 2023)
+  info: Mentor - Langming Liu, Outstanding Research Project Award
   email: jiangpilu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaocong Wang
   year: 2022-2023
   photo: jiaocongwang.jpg
-  info: Mentor - Yuhao Wang, Outstanding Research Project Award (summer 2023)
+  info: Mentor - Yuhao Wang, Outstanding Research Project Award
   email: jiaocwang2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jie Wang
   year: 2022-2023
   photo: jiewang.jpg
-  info: Mentor - Maolin Wang, Outstanding Dissertation Award (summer 2023), current position - AIFT (Laboratory for AI-Powered Financial Technologies Ltd.)
+  info: Mentor - Maolin Wang, Outstanding Dissertation Award, current position - HK AIFT
   email: jwang998-c@my.cityu.edu.hk
   number_educ: 0
 - name: Bo Li
   year: 2022-2023
   photo: boli.jpg
-  info: Mentor - Langming Liu, Outstanding Research Project Award (summer 2023)
+  info: Mentor - Langming Liu, Outstanding Research Project Award
   email: boli77-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yinliang Kang
@@ -112,13 +112,13 @@
 - name: Sheng Zhang
   year: 2023-2024
   photo: shengzhang.jpg
-  info: Mentor - Maolin Wang, first author - RecSys24, KDD25, Outstanding Academic Performance Award (summer 2024), Outstanding Research Project Award (summer 2024)
+  info: Mentor - Maolin Wang, first author - RecSys24, KDD25, Outstanding Academic Performance Award, Outstanding Research Project Award
   email: szhang844-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiawei Liu
   year: 2023-2024
   photo: jiaweiliu.jpg
-  info: Mentor - Yejing Wang, Outstanding Academic Performance Award (summer 2024), Outstanding Dissertation Award (summer 2024)
+  info: Mentor - Yejing Wang, Outstanding Academic Performance Award, Outstanding Dissertation Award
   email: jiawliu7-c@my.cityu.edu.hk
   number_educ: 0
   website: https://patrick-liu123.github.io/
