--- a/_data/alumni_ms.yml
+++ b/_data/alumni_ms.yml
@@ -81,13 +81,13 @@
 - name: Jiangping Lu
   year: 2022-2023
   photo: jiangpinglv.jpg
-  info: Mentor - Langming Liu, Outstanding Research Project Award
+  info: Mentor - Langming Liu, Outstanding Research Project Award, current position - Excel Technology International (HK) Ltd
   email: jiangpilu2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiaocong Wang
   year: 2022-2023
   photo: jiaocongwang.jpg
-  info: Mentor - Yuhao Wang, Outstanding Research Project Award
+  info: Mentor - Yuhao Wang, Outstanding Research Project Award, current position - Jinan Intelligence Silicon Technology
   email: jiaocwang2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jie Wang
@@ -99,7 +99,7 @@
 - name: Bo Li
   year: 2022-2023
   photo: boli.jpg
-  info: Mentor - Langming Liu, Outstanding Research Project Award
+  info: Mentor - Langming Liu, Outstanding Research Project Award, current position - Minmetals Securities Co.,Ltd
   email: boli77-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yinliang Kang
@@ -112,33 +112,33 @@
 - name: Sheng Zhang
   year: 2023-2024
   photo: shengzhang.jpg
-  info: Mentor - Maolin Wang, first author - RecSys24, KDD25, Outstanding Academic Performance Award, Outstanding Research Project Award
+  info: Mentor - Maolin Wang, first author - RecSys24, KDD25, Outstanding Academic Performance Award, Outstanding Research Project Award, Assistant Engineer at Institue of Physics Chinese Academy of Sciences
   email: szhang844-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiawei Liu
   year: 2023-2024
   photo: jiaweiliu.jpg
-  info: Mentor - Yejing Wang, Outstanding Academic Performance Award, Outstanding Dissertation Award
+  info: Mentor - Yejing Wang, Outstanding Academic Performance Award, Outstanding Dissertation Award, current position - PhD at HKBU
   email: jiawliu7-c@my.cityu.edu.hk
   number_educ: 0
   website: https://patrick-liu123.github.io/
 - name: Qiyuan Ge
   year: 2023-2024
   photo: qiyuange.jpg
-  info: Mentor - Wenlin Zhang
+  info: Mentor - Wenlin Zhang, current position - Baidu
   email: qiyuange2-c@my.cityu.edu.hk
   number_educ: 0
   website: https://github.com/Qiyuan-Ge
 - name: Zhuoran Li
   year: 2023-2024
   photo: zhuoranli.jpg
-  info: Mentor - Yuanshao Zhu
+  info: Mentor - Yuanshao Zhu, current position - research assistant at PolyU
   email: zhuorali7-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yiqi You
   year: 2023-2024
   photo: yiqiyou.jpg
-  info: Mentor - Pengyue Jia
+  info: Mentor - Pengyue Jia, current position - Bank of China Hebei Branch
   email: yqyou4-c@my.cityu.edu.hk
   number_educ: 0
 - name: Xuchuan Wang
@@ -150,17 +150,19 @@
 - name: Jiaming Guo
   year: 2023-2024
   photo: jiamingguo.jpg
+  info: Mentor - Chun Pong Lau, current position - PhD at CityU
   email: jiaminguo6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yuantian Zhou
   year: 2023-2024
   photo: yuantianzhou.jpg
+  info: current position - Huawei
   email: yuantzhou3-c@my.cityu.edu.hk
   website: https://github.com/ZhouYuantian
   number_educ: 0
 - name: Ziwei Liu
   year: 2023-2024
-  info: Mentor - Qidong Liu, first author - AAAI'25
+  info: Mentor - Qidong Liu, first author - AAAI'25, current position - research assistant at CUHK-Shenzhen
   photo: ziweiliu.jpg
   email: ziwliu8@gmail.com
   website: https://github.com/BokettoW
