--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -63,3 +63,57 @@
   info: Mentor - Maolin Wang
   email: bowyu2-c@my.cityu.edu.hk
   number_educ: 0
+
+- name: Zhiqi Li
+  photo: lizhiqi.jpg
+  email: zhiqli6-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Chenwei Chen
+  photo: chenweichen.jpg
+  email: weicchen6-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Jinyue Yang
+  photo: yangjingyue.jpg
+  email: jinyuyang5-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Junjie Liu
+  photo: liujunjie.jpg
+  email: junjiliu6-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Yining Wang
+  photo: wangyining.jpg
+  email: ynwang36-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Linjie Mi
+  photo: milinjie.jpg
+  email: linjiemi2-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Xiaoying Chen
+  photo: chenxiaoying.jpg
+  email: xchen2899-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Haoran Wang
+  photo: wanghaoran.jpg
+  email: hwang847-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Yanxin Chen
+  photo: chenyanxin.jpg
+  email: ychen3447-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Hongshi Liu
+  photo: liuhongshi.jpg
+  email: hongsliu3-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Shuqi Zhang
+  photo: zhangshuqi.jpg
+  email: szhang2262-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Xiangyang Zhao
+  photo: zhaoxiangyang.jpg
+  email: xzhao379-c@my.cityu.edu.hk
+  number_educ: 0
+- name: Tuohuan You
+  photo: youtuohuan.jpg
+  email: tuohuayou2-c@my.cityu.edu.hk
+  number_educ: 0
+
