--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -68,7 +68,7 @@
   photo: lizhiqi.jpg
   email: zhiqli6-c@my.cityu.edu.hk
   number_educ: 0
-- name: Chenwei Chen
+- name: Weichen Chen
   photo: chenweichen.jpg
   email: weicchen6-c@my.cityu.edu.hk
   number_educ: 0
