--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -73,7 +73,7 @@
   email: weicchen6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jinyue Yang
-  photo: yangjingyue.jpg
+  photo: yangjinyue.jpg
   email: jinyuyang5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Junjie Liu
