--- a/_data/alumni_ms.yml
+++ b/_data/alumni_ms.yml
@@ -112,7 +112,7 @@
 - name: Sheng Zhang
   year: 2023-2024
   photo: shengzhang.jpg
-  info: Mentor - Maolin Wang, first author - RecSys24, KDD25, Outstanding Academic Performance Award, Outstanding Research Project Award, Assistant Engineer at Institue of Physics Chinese Academy of Sciences
+  info: Mentor - Maolin Wang, first author - RecSys24, KDD25, Outstanding Academic Performance Award, Outstanding Research Project Award, current position - Assistant Engineer at Institue of Physics Chinese Academy of Sciences
   email: szhang844-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jiawei Liu
