--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,16 @@
 - date: Jan 2025
+  headline: "Our paper 'Optimizing Tabular Data Synthesis in Recommendations' got accepted by WWW'25 (industry track). Congratulations to Jingtong Gao and Xiaopeng Li!"
+
+- date: Jan 2025
+  headline: "Our paper 'GAS: Generative Auto-bidding with Post-training Search' got accepted by WWW'25 (industry track). Congratulations to Jingtong Gao!"
+
+- date: Jan 2025
+  headline: "Our paper 'LLM4Rerank:LLM-based Auto-Reranking Framework for Recommendations' got accepted by WWW'25. Congratulations to Jingtong Gao!"
+
+- date: Jan 2025
+  headline: "Our paper 'Behavior Modeling Space Reconstruction for E-Commerce Search' got accepted by WWW'25. Congratulations to Yejing Wang, Chi zhang, QidongLiu, and Maolin Wang!"
+
+- date: Jan 2025
   headline: "Our paper 'The impact of artificial intelligence on carbon market in China: Evidence from quantile-on-quantile regression approach' got accepted by Technological Forecasting and Social Change. Congratulations!"
   
 - date: Dec 2024
