--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Jan 2025
+  headline: "Our paper 'An Adaptive Entire-space Multi-scenario Multi-task Transfer Learning Model for Recommendations' got accepted by TKDE. Congratulations to Qingqing Yi!"
+
+- date: Jan 2025
   headline: "Our paper 'Optimizing Tabular Data Synthesis in Recommendations' got accepted by WWW'25 (industry track). Congratulations to Jingtong Gao and Xiaopeng Li!"
 
 - date: Jan 2025
