--- a/_data/pic.yml
+++ b/_data/pic.yml
@@ -1,3 +1,6 @@
+- title: Spring 2025 - Qasr Al Watan Palace
+  image: coling_travel_25.jpg
+
 - title: Winter 2024 - ICDM in Abu Dhabi
   image: icdm24.jpg
   
