--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Jan 2025
+  headline: "Our workshop 'AgentIR: 2nd Workshop on Agent-based Information Retrieval' got accepted by SIGIR'25. Congratulations to Pengyue Jia!"
+
+- date: Jan 2025
   headline: "Our paper 'An Adaptive Entire-space Multi-scenario Multi-task Transfer Learning Model for Recommendations' got accepted by TKDE. Congratulations to Qingqing Yi!"
 
 - date: Jan 2025
