--- a/_data/ms24.yml
+++ b/_data/ms24.yml
@@ -66,54 +66,71 @@
 
 - name: Zhiqi Li
   photo: lizhiqi.jpg
+  info: Mentor - Maolin Wang
   email: zhiqli6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Weichen Chen
   photo: chenweichen.jpg
+  info: Mentor - Jingtong Gao
   email: weicchen6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Jinyue Yang
   photo: yangjinyue.jpg
+  info: Mentor - Chao Zhang
   email: jinyuyang5-c@my.cityu.edu.hk
   number_educ: 0
 - name: Junjie Liu
   photo: liujunjie.jpg
+  info: Mentor - Tongzhou Wu
   email: junjiliu6-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yining Wang
   photo: wangyining.jpg
+  info: Mentor - Jingyu Peng
   email: ynwang36-c@my.cityu.edu.hk
   number_educ: 0
 - name: Linjie Mi
   photo: milinjie.jpg
+  info: Mentor - Yingyi Zhang
   email: linjiemi2-c@my.cityu.edu.hk
   number_educ: 0
 - name: Xiaoying Chen
   photo: chenxiaoying.jpg
+  info: Mentor - Siqi Lei
   email: xchen2899-c@my.cityu.edu.hk
   number_educ: 0
 - name: Haoran Wang
   photo: wanghaoran.jpg
+  info: Mentor - Kai Li
   email: hwang847-c@my.cityu.edu.hk
   number_educ: 0
 - name: Yanxin Chen
   photo: chenyanxin.jpg
+  info: Mentor - Derong Xu
   email: ychen3447-c@my.cityu.edu.hk
   number_educ: 0
 - name: Hongshi Liu
   photo: liuhongshi.jpg
+  info: Mentor - Yimin Deng
   email: hongsliu3-c@my.cityu.edu.hk
   number_educ: 0
 - name: Shuqi Zhang
   photo: zhangshuqi.jpg
+  info: Mentor - Rungen Liu
   email: szhang2262-c@my.cityu.edu.hk
   number_educ: 0
 - name: Xiangyang Zhao
   photo: zhaoxiangyang.jpg
+  info: Mentor - Pengyue Jia
   email: xzhao379-c@my.cityu.edu.hk
   number_educ: 0
 - name: Tuohuan You
   photo: youtuohuan.jpg
+  info: Mentor - Maolin Wang
   email: tuohuayou2-c@my.cityu.edu.hk
   number_educ: 0
-
+- name: Haojia Xiang
+  photo: xianghaojia.jpg
+  info: Mentor - Huidong Wu
+  email: haojxiang2-c@my.cityu.edu.hk
+  number_educ: 0
