--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
-- date: Jan 2025
+- date: Feb 2025
+  headline: "Yusheng Lu was awarded the Peter Ho Conference Scholarships. Congratulations to Yusheng Lu!"
+
+- date: Feb 2025
   headline: "Our workshop 'AgentIR: 2nd Workshop on Agent-based Information Retrieval' got accepted by SIGIR'25. Congratulations to Pengyue Jia!"
 
 - date: Jan 2025
