--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: Feb 2025
+  headline: "Our paper 'Dual Test-time Training for Out-of-distribution Recommender System' got accepted by TKDE. Congratulations!"
+
+- date: Feb 2025
   headline: "Four of our submissions to AAAI'25 have been selected for oral presentations (4.6%). Congratulations to Zijian Zhang, Qidong Liu, Jiawei Cheng, and Xiao Han.
   Paper List: (LLM-Powered Efficient User Simulator for Recommender System; GARLIC: GPT-Augmented Reinforcement Learning with Intelligent Control for Vehicle Dispatching; POI-Enhancer: An LLM-based Semantic Enhancement Framework for POI Representation Learning; LLMEmb: Large Language Model Can Be a Good Embedding Generator for Sequential Recommendation)"
 
